Bug 490861 - Replace new Integer() with Integer.valueOf() in rest of org.eclipse.swt repo
Only one place in swt.snippets

Change-Id: I7899ae4f0a558f0aaed3144ec692680afb996610
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>